<resources>
    <string name="app_name">Quizz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_question">QuestionActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_actuelle">Score actuelle :</string>
    <string name="zero">0</string>
    <string name="settings">settings</string>
    <string name="menu_play">Play</string>
    <string name="menu_score">Score</string>
    <string name="menu_list">liste</string>
    <string name="menu_add">Ajouter</string>
    <string name="menu_delete">Supprimer</string>
    <string name="playfragment_play">Start</string>
    <string name="menu_title">Questions</string>
</resources>
