<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <item android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/nav_play"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_play" />
            <item
                android:id="@+id/nav_score"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_score" />
            <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_list" />
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_add" />
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_delete" />
        </menu>
    </item>

</menu>
